# hubspot-rag-autoresponder

./: .env.example  README.md  pyproject.toml  requirements.txt
docs/: plan.md  runbook.md  workflow.md
hubspot_autoresponder/: config.py  hubspot_client.py  kb.py  models.py  policy.py  responder.py  runner.py  storage.py
instances/user-a/: .env.example
instances/user-a/knowledge_base/: README.md
instances/user-b/: .env.example
instances/user-b/knowledge_base/: README.md
knowledge_base/: sample-ticket-faq.md
samples/: access_issue_ticket.json
scripts/: bootstrap_venv.sh  create_instance.py  install.sh  list_owners.py  run_tickets.py  test_ticket_reply.py
systemd/: hubspot-rag-autoresponder.service
