[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hubspot-rag-autoresponder"
version = "0.1.0"
description = "HubSpot ticket autoresponder with KB-backed reply drafting"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hubspot_autoresponder*"]
